docs/demos/TrafficManagerProfile/testfiles/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: istio-ingress
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-health-probe-request-path: /healthz/ready
    service.beta.kubernetes.io/port_80_health-probe_port: "15021"
    service.beta.kubernetes.io/port_80_health-probe_protocol: http 
spec:
  gatewayClassName: istio
  listeners:
  - name: default
    hostname: "*.mitchconnors.com"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello-world
  namespace: istio-ingress
spec:
  parentRefs:
  - name: gateway
    namespace: istio-ingress
  hostnames: ["local.mitchconnors.com"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /hello
    backendRefs:
    - name: helloworld
      port: 5000
    filters:
      - type: ResponseHeaderModifier
        responseHeaderModifier:
          add:
            - name: gateway-location
              value: foobar
